--- a/src/components/challengeN51/index.html
+++ b/src/components/challengeN51/index.html
@@ -1,10 +1,11 @@
 <div class="frame">
-  <input id="button" name="state" type="checkbox"><label class="icon" for="button">
+  <input id="button" type="checkbox"/>
+  <label class="icon" for="button">
     <div class="pause"></div>
     <div class="play"></div>
   </label>
   <div class="counter">
-		<div class="ten-thousands number">
+    <div class="ten-thousands number">
       <span class="number-0">0</span>
       <span class="number-1">1</span>
       <span class="number-2">2</span>
