--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -1,12 +1,23 @@
-.component {
-  position: absolute;
-  width: 400px;
-  height: 400px;
-  border-radius: 2px;
-	box-shadow: 4px 8px 16px 0 rgba(0,0,0,0.1);
-	overflow: hidden;
-  background: #fff;
+.card-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  .card {
+    width: 400px;
+    height: 400px;
+    border-radius: 2px;
+    box-shadow: 4px 8px 16px 0 rgba(0,0,0,0.1);
+    overflow: hidden;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &.card__dark {
+      background: #3f3f3f;;
+    }
+  }
 }
+
+
